renamed /import directory to /jasperserver-import and update minimum memory/start up settings as we were encountering memory problems on startup inside a vagrant image.